tests/ui/g-typed-route-duplicate-label-project.stderr
error[E0080]: evaluation panicked: route arms reuse the same label
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project_role::<0, hibana::g::Route<hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<5, ()>>, hibana::g::Send<hibana::g::Role<0>, hibana::g::Role<0>, hibana::g::Msg<5, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_program_projection::<hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>, hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>>>`
 --> src/g.rs
  |
  |         panic_program_source_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_program_source_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         1 => panic!("route arms reuse the same label"),
  |              ----------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_program_projection::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project_role::<0, hibana::g::Route<hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>, hibana::g::Send<Role<0>, Role<0>, Msg<5, ()>>>>`
 --> src/global/role_program/program.rs
  |
  |         crate::g::project_role(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
